Atención Requerimiento REQ-367

--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2417,6 +2417,8 @@
     <Content Include="Areas\Supervision\Views\ManInforme\_CoberturaBosNat.cshtml" />
     <Content Include="Archivos\Plantilla\DivisionPredio.xlsx" />
     <Content Include="Areas\Fiscalizacion\Views\ManProveido\_Shared\_renderFallTitular106.cshtml" />
+    <Content Include="Areas\General\Views\Reportes\Rpt_Historial_Titulo_Habilitante_v2.cshtml" />
+    <Content Include="Areas\General\Views\Reportes\_Rpt_HistorialTHDetalle_v2.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
@@ -2469,6 +2471,7 @@
     <Content Include="Scripts\apexcharts\locales\zh-cn.json" />
     <Content Include="Scripts\ckeditor5\ckeditor.js.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery 3.7.1\jquery-3.7.1.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
