--- a/THSancionYCaducidad/Web.config
+++ b/THSancionYCaducidad/Web.config
@@ -21,9 +21,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="MesesTH" value="-60"/>
+	<add key="urlObservatorio" value="https://observatorio.osinfor.gob.pe/Trazabilidad/detalle-th/"/>
   </appSettings>
   <connectionStrings>
-    <add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/obsd.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=USERNAME;PASSWORD=PASSWORD" providerName="Oracle.DataAccess.Client" />
+    <add name="ConOracle" connectionString="DATA SOURCE=10.10.11.43:1521/obsd.osinfor.gob.pe;PERSIST SECURITY INFO=True;USER ID=user;PASSWORD=pass" providerName="Oracle.DataAccess.Client" />
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
   </connectionStrings>
   <system.web> 
