--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2428,6 +2428,7 @@
     <Content Include="Areas\Fiscalizacion\Views\ManProveido\_Shared\_renderFallTitular106.cshtml" />
     <Content Include="Areas\General\Views\Reportes\Rpt_Historial_Titulo_Habilitante_v2.cshtml" />
     <Content Include="Areas\General\Views\Reportes\_Rpt_HistorialTHDetalle_v2.cshtml" />
+    <Content Include="Areas\General\Views\Reportes\NoReporte.cshtml" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
