--- a/Capas/CapaEntidad/CapaEntidad.csproj
+++ b/Capas/CapaEntidad/CapaEntidad.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Documento\Ent_TFFS.cs" />
     <Compile Include="Documento\Ent_THABILITANTE.cs" />
     <Compile Include="Documento\Ent_THABILITANTE_POI.cs" />
+    <Compile Include="Documento\Ent_TITULAR_RLEGAL.cs" />
     <Compile Include="Documento\Ent_Usuario.cs" />
     <Compile Include="Documento\Ent_Veeduria.cs" />
     <Compile Include="Documento\Ent_WS_OSINFOR.cs" />
