Agregar referencia en el reporte de supervisiones

--- a/SupervAntesExtraccion/SupervAntesExtraccion.csproj
+++ b/SupervAntesExtraccion/SupervAntesExtraccion.csproj
@@ -274,8 +274,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Styles\fonts\fontawesome-webfont.eot" />
     <Content Include="Styles\fonts\fontawesome-webfont.ttf" />
@@ -286,6 +284,9 @@
     <Content Include="Styles\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Styles\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Styles\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Views\Home\Close.cshtml" />
+    <Content Include="Views\Home\mensaje.cshtml" />
+    <Content Include="Views\Shared\_MasterCabecera.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
