--- a/THSancionYCaducidad/THSancionYCaducidad.csproj
+++ b/THSancionYCaducidad/THSancionYCaducidad.csproj
@@ -34,7 +34,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\CONTRA~2\AppData\Local\Temp\vs4F64.tmp\Debug\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\chuaroc\AppData\Local\Temp\vsECB6.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,7 +44,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\CONTRA~2\AppData\Local\Temp\vs4F64.tmp\Release\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\chuaroc\AppData\Local\Temp\vsECB6.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotNetOpenAuth.AspNet, Version=4.1.0.0, Culture=neutral, PublicKeyToken=2780ccd10d57b246, processorArchitecture=MSIL">
