--- a/SIGOFCv3/SIGOFCv3.csproj
+++ b/SIGOFCv3/SIGOFCv3.csproj
@@ -2431,6 +2431,7 @@
     <Content Include="Areas\General\Views\Reportes\_Rpt_HistorialTHDetalle_v2.cshtml" />
     <Content Include="Areas\General\Views\Reportes\NoReporte.cshtml" />
     <Content Include="Areas\General\Views\Controles\_IntegracionDOCSIADO.cshtml" />
+    <Content Include="Archivos\Plantilla\PlantillaAntecedentes.xlsx" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Areas\PlanFocalizacion\Views\web.config" />
     <Content Include="Areas\PlanFocalizacion\Views\Shared\_Layout.cshtml" />
