Configurar usuario consulta OSINFOR PIDE

--- a/SIGOFCv3/Web.config
+++ b/SIGOFCv3/Web.config
@@ -33,6 +33,7 @@
     <add key="urlMiBosque" value="https://localhost:44362/api/" />
 	<add key="PathLogoCM" value="\PlantillaPDF\osinfor_logo_CM.png" />
 	<add key="PathFormulaCM" value="\PlantillaPDF\formula_CM.png" />
+	<add key="UsuarioPIDE" value="app_sigosfc" />
   </appSettings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
